# CortidQCT

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  appveyor-reqs-install-matlab.cmd  appveyor-reqs-install.cmd  appveyor.yml
Dependencies/: igl-patch.txt
Dependencies/Faddeeva/: CMakeLists.txt  Faddeeva_mex.cc
app/: CLI.cpp  CMakeLists.txt
bindings/: CMakeLists.txt
bindings/C/: CMakeLists.txt  c-bindings.cpp
bindings/C/examples/: CMakeLists.txt  cli.c
bindings/C/include/CortidQCT/C/: CortidQCT.h
bindings/C/src/: ColorToLabelMap.cpp  CortidQCT-Common.h  Error.cpp  Mesh.cpp  MeshFitter.cpp  MeshFitterState.cpp  ObjectBase.cpp  VoxelVolume.cpp
bindings/matlab/: Autoreleasepool.m  CMakeLists.txt  ColorToLabelMap.m  CortidQCT_Object.m  Error.m  Mesh.m  MeshFitter.m  MeshFitterResult.m  ObjectBase.m  VoxelVolume.m  autoreleasePoolPop.m  autoreleasePoolPush.m  prepareLibrary.m
bindings/matlab/+CortidQCT/+lib/: Autoreleasepool.m  ColorToLabelMap.m  Error.m  Mesh.m  MeshFitter.m  MeshFitterResult.m  MeshFitterState.m  ObjectBase.m  VoxelVolume.m
bindings/matlab/+CortidQCT/+lib/+image3/: image3.m  slice3.m
bindings/matlab/examples/: CortidQCT_cli.m  RayMeshIntersection.m
bindings/matlab/include/CortidQCT/Matlab/: CortidQCT.h
bindings/matlab/src/: matlab-addons.c
cmake/: CortidQCTConfig.cmake.in  FindMatlab.cmake  Init.cmake
cmake/Hunter/: config.cmake
common/: CMakeLists.txt
data/: SimpleVertebra-labels.txt  SimpleVertebra.off  Vertebra.off  ascendingSlices.bst  testColorMap.yml  testColorMapExt.yml  testConfig.yml  testConfig2.yml  testModel.yml
docker/: Dockerfile
html/: BarycentricPoint_8h.html  BarycentricPoint_8h__dep__incl.map  BarycentricPoint_8h__dep__incl.md5  BarycentricPoint_8h__incl.map  BarycentricPoint_8h__incl.md5  BarycentricPoint_8h_source.html  CheckExtension_8h.html  CheckExtension_8h__incl.map  CheckExtension_8h__incl.md5  CheckExtension_8h_source.html  ColorToLabelMapIO_8cpp.html  ColorToLabelMapIO_8cpp__incl.map  ColorToLabelMapIO_8cpp__incl.md5  ColorToLabelMapIO_8h.html  ColorToLabelMapIO_8h__dep__incl.map  ColorToLabelMapIO_8h__dep__incl.md5  ColorToLabelMapIO_8h__incl.map  ColorToLabelMapIO_8h__incl.md5  ColorToLabelMapIO_8h_source.html  ColorToLabelMap_8h.html  ColorToLabelMap_8h__dep__incl.map  ColorToLabelMap_8h__dep__incl.md5  ColorToLabelMap_8h__incl.map  ColorToLabelMap_8h__incl.md5  ColorToLabelMap_8h_source.html  CommonMath_8h.html  CommonMath_8h__dep__incl.map  CommonMath_8h__dep__incl.md5  CommonMath_8h__incl.map  CommonMath_8h__incl.md5  CommonMath_8h_source.html  CortidQCT-Common_8h_source.html  CortidQCT_8h.html  CortidQCT_8h_source.html  DiscreteRangeDecorators_8h.html  DiscreteRangeDecorators_8h__dep__incl.map  DiscreteRangeDecorators_8h__dep__incl.md5  DiscreteRangeDecorators_8h__incl.map  DiscreteRangeDecorators_8h__incl.md5  DiscreteRangeDecorators_8h_source.html  (+548 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  enums_0.js  files_0.js  files_1.js  files_3.js  files_5.js  files_7.js  files_8.js  files_9.js  files_b.js  (+46 more)
include/CortidQCT/: CortidQCT.h
include/CortidQCT/src/: BarycentricPoint.h  ColorToLabelMap.h  DiscreteRange.h  LabelToColorMap.h  MeasurementModel.h  Mesh.h  MeshFitter.h  Optional.h  Padding.h  Ray.h  RayMeshIntersection.h  Version.h.in  VolumeSize.h  VoxelSize.h  VoxelVolume.h  filesystem.h  propagate_const.h
lib/: CMakeLists.txt  CheckExtension.h  ColorToLabelMapIO.cpp  ColorToLabelMapIO.h  CommonMath.h  CortidQCT.cpp  DiscreteRangeDecorators.h  DisplacementOptimizer.cpp  DisplacementOptimizer.h  EigenAdaptors.h  MatrixIO.h  MeasurementModel.cpp  Mesh.cpp  MeshAdaptors.h  MeshFitter.cpp  MeshFitterConfiguration.cpp  MeshFitterHiddenState.cpp  MeshFitterHiddenState.h  MeshFitterImpl.cpp  MeshFitterImpl.h  MeshHelpers.h  MeshSIWriter.cpp  MeshSIWriter.h  SIMesh.cpp  SIMesh.h  Sampler.h  VoxelVolume.cpp  WeightedARAPFitter.cpp  WeightedARAPFitter.h  lib_config.h.in
lib/optional/: LoadFromBST.h
matlab/: CMakeLists.txt  CortidQCT.prj  CortidQCT.prj.in
matlab/+CortidQCT/: BaseFunction.m  CreateModel.mlapp  G.m  OTF.m  PSF.m  evalFZ.m  evalPDF.m  fW.m  fW_gpu.m  fZeta.m  floatVector2base64.c  g.m  gAutocorrelation.m  gPrimitive.m  genGTable.m  gi.m  go.m  mtimes3xN.m  mtimesND.m  muZeta.m  saveModel.m  scannerMTFTable.m  varZeta.m
scripts/: appveyor-create-release.cmd  appveyor-reqs-install.cmd  generateDocumentationAndDeploy.sh  setup-matlab.sh  travis-build.sh  travis-cmake.sh  travis-deploy.sh  travis-toolchain.sh
tests/: CMakeLists.txt  CustomColorToLabelMap.cpp  FitMesh.cpp  InternalSampler.cpp  MeasurementModel.cpp  Mesh.cpp  MeshFitterConfiguration.cpp  VoxelVolume.cpp  tests_config.h.in
tools/: CMakeLists.txt  listOpenCLStats.cpp  meshConvert.cpp
